Suggestions: Fix the featured label alignment error
The featured tag was a few pixels down compared to language labels

Bug: T106405

--- a/modules/dashboard/styles/ext.cx.suggestionlist.less
+++ b/modules/dashboard/styles/ext.cx.suggestionlist.less
@@ -13,7 +13,7 @@
 	.mw-ui-four-fifths;
 	position: relative;
 	height: 100px;
-	font-size: 12px;
+	font-size: small;;
 
 	.cx-slitem__translation-link {
 		.mw-ui-one-whole;
@@ -39,7 +39,7 @@
 	color: #00af89;
 	// This need to be in green backgound, but for now we have
 	// everything as featured.
-	padding: 2px;
+	padding: 0 2px;
 	border-radius: 1px;
 	font-size: small;
 }
